2012-06-16  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL] Rebaseline fast/lists/001*.html tests after r120495
        https://bugs.webkit.org/show_bug.cgi?id=89283

        Unreviewed EFL gardening after r120495.

        * platform/efl/fast/lists/001-expected.png:
        * platform/efl/fast/lists/001-expected.txt:
        * platform/efl/fast/lists/001-vertical-expected.png:
        * platform/efl/fast/lists/001-vertical-expected.txt:

2012-06-16  Christophe Dumez  <christophe.dumez@intel.com>

        [EFL] Rebaseline MathML tests after r120492
        https://bugs.webkit.org/show_bug.cgi?id=89282

        Unreviewed EFL gardening. Several MathML tests needed
        rebaselining after r120492.

        * platform/efl/mathml/presentation/attributes-expected.txt:
        * platform/efl/mathml/presentation/fenced-expected.txt:
        * platform/efl/mathml/presentation/fenced-mi-expected.txt:
        * platform/efl/mathml/presentation/fractions-expected.txt:
        * platform/efl/mathml/presentation/fractions-vertical-alignment-expected.txt:
        * platform/efl/mathml/presentation/mo-stretch-expected.txt:
        * platform/efl/mathml/presentation/mroot-pref-width-expected.txt:
        * platform/efl/mathml/presentation/roots-expected.txt:
        * platform/efl/mathml/presentation/row-alignment-expected.png:
        * platform/efl/mathml/presentation/row-alignment-expected.txt:
        * platform/efl/mathml/presentation/sub-expected.txt:
        * platform/efl/mathml/presentation/subsup-expected.txt:
        * platform/efl/mathml/presentation/sup-expected.txt:
        * platform/efl/mathml/presentation/tables-expected.txt:
        * platform/efl/mathml/presentation/tokenElements-expected.txt:
        * platform/efl/mathml/presentation/under-expected.png:
        * platform/efl/mathml/presentation/under-expected.txt:
        * platform/efl/mathml/presentation/underover-expected.png: