@@ -1,7 +1,7 @@
 <html>
 <html>
 <head>
-<script src='../fast/js/resources/js-test-pre.js'></script>
+<script src='../../../fast/js/resources/js-test-pre.js'></script>
 </head>
 <body id='body'>
     <footer tabindex='0' id='footer01'>Footer outside section and article elements.</footer>
@@ -31,6 +31,6 @@
         expectRole('AXGroup', 'group', '#footer02');
         expectRole('AXGroup', 'group', '#footer03');
     </script>
-<script src='../fast/js/resources/js-test-post.js'></script>
+<script src='../../../fast/js/resources/js-test-post.js'></script>
 </body>
 </html>
