@@ -1,7 +1,7 @@
 <html>
 <html>
 <head>
-<script src='../fast/js/resources/js-test-pre.js'></script>
+<script src='../../../fast/js/resources/js-test-pre.js'></script>
 </head>
 <body id='body'>
     <header tabindex='0' id='header01'>Header outside section and article elements.</header>
@@ -31,6 +31,6 @@
         expectRole('AXGroup', 'group', '#header02');
         expectRole('AXGroup', 'group', '#header03');
     </script>
-<script src='../fast/js/resources/js-test-post.js'></script>
+<script src='../../../fast/js/resources/js-test-post.js'></script>
 </body>
 </html>
